Added a pointer to a resource document help page.

--- a/help/additional_module_guidelines.htm
+++ b/help/additional_module_guidelines.htm
@@ -11,11 +11,17 @@
 <body>
 
 <h1 align="center"><a name="20020422182450_1">Additional module guidelines</a></h1>
-<p>Version $Id: additional_module_guidelines.htm,v 1.17 2002/07/29 15:22:07 robbod Exp $</p>
-<b>Contents</b><br>
-
-
-<!--plugin:CreateTOC--><p>
+<p>Version $Id: additional_module_guidelines.htm,v 1.18 2002/08/08 16:28:55 thendrix Exp $</p>
+<h3>References</h3>
+<p><a href="http://dcnicn4.tc184-sc4.org/SC4_Open/SC4_and_Working_Groups/SC4_N-DOCS/1000-1249">ISO
+TC 184/SC4, <i>Draft standing document - Guidelines for the content of
+application modules</i>, ISO TC184/SC4/N1161, 2001-05-02</a></p>
+<p><a href="http://dcnicn4.tc184-sc4.org/SC4_Open/SC4_and_Working_Groups/SC4_N-DOCS/1000-1249">ISO
+TC 184/SC4, <i>Standing document - SC4 Supplementary directives</i>, ISO
+TC184/SC4/N1217&nbsp; 2001-11-01</a></p>
+<h3>
+<b>Contents</b></h3>
+<p>
 <img src="item-h0.gif" alt="" width="18" height="9" valign="middle"><a target="_self" href="#20020422182450_2">Naming of schemas</a><br>
 <img src="item-h0.gif" alt="" width="18" height="9" valign="middle"><a target="_self" href="#20020422182450_3">Naming of
 entity data types and named types</a><br>
@@ -108,7 +114,9 @@ Tips</a>
 </blockquote>
 <!--/plugin:CreateTOC-->
 
-<h2>&nbsp;</h2>
+<p><a target="_self" href="#Editorial considerations">Editorial considerations</a></p>
+
+<p>&nbsp;</p>
 
 <h2><a name="20020422182450_2">Naming of schemas</a></h2>
 
@@ -151,11 +159,9 @@ with the schema name.</p>
 <h2><a name="20020422182450_4">Text definitions of Select types</a></h2>
 
 <h3><a name="20020422182450_5">- for a non extensible SELECT type:</a></h3>
-<p><font face="Arial" size="2">&quot;</font>
 <p><font face="Arial" size="2">The&nbsp;&lt;b&gt;select_type_name&lt;/b&gt;
 type is a list of alternate data types. It provides a mechanism to refer to an
 instance of one of these data types.</font>
-<p><font face="Arial" size="2">&quot;</font>
 <h3><a name="20020422182450_6">- for an extensible non-empty SELECT type:</a></h3>
 <p><font face="Arial" size="2">&quot;The&nbsp;&lt;b&gt;xxx_select_type_name&lt;/b&gt;
 type is an </font>extensible list of alternate data types. It provides a
@@ -163,11 +169,8 @@ mechanism to refer to instances of the data types included in the types that
 extend the <font face="Arial" size="2">&lt;b&gt;xxx_select_type_name&lt;/b&gt; </font>type<font face="Arial" size="2">
 or in its
 extensions.</font>
-<p><font face="Arial" size="2">&nbsp;</font>
 <p><font face="Arial" size="2">NOTE The list of entity data types may be
 extended in application modules that use the constructs of the present module.</font>
-<p><font face="Arial" size="2">&quot;</font>
-<p>&nbsp;
 <h3><a name="20020422182450_7">- for an extensible empty SELECT type:</a></h3>
 <p><font face="Arial" size="2">&quot;The&nbsp;&lt;b&gt;xxx_select_type_name&lt;/b&gt;
 type i</font>s an extensible list of alternate data types. It provides a
@@ -176,30 +179,19 @@ extend the <font face="Arial" size="2">&lt;b&gt;xxx_select_type_name&lt;/b&gt; <
 <p class="note"><small>NOTE&nbsp;&nbsp;This empty extensible select requires
 extension in a further module to ensure that all entities have at least one
 valid instantiation.</small></p>
-<p>&quot;</p>
 
 <h3><a name="20020422182450_8">- for an extended not extensible SELECT type:</a></h3>
 
-<p>&quot;</p>
-
 <p>The &lt;b&gt;yyy_xxx&lt;/b> type is an extension of the &lt;b&gt;xxx&lt;/b> type.
 It adds to this latter type, the entity data type &lt;b&gt;yyy&lt;/b>.&nbsp;</p>
-
-<p>&quot;</p>
-
-<p>&nbsp;</p>
 
 <h3><a name="20020422182450_9">- for an extended and&nbsp; extensible SELECT type:</a></h3>
 
-<p>&quot;</p>
-
 <p>The &lt;b&gt;yyy_xxx&lt;/b> type is an extension of the &lt;b&gt;xxx&lt;/b> type.
 It adds to this latter type, the entity data type &lt;b&gt;yyy&lt;/b>.&nbsp;</p>
 
-<p>&nbsp;
 <p><font face="Arial" size="2">NOTE The list of entity data types may be
 extended in application modules that use the constructs of the present module.</font>
-<p>&quot;</p>
 
 <span class="772050311-26032002">
 
@@ -215,41 +207,12 @@ e.g.</p>
 <p>&lt;ext_descriptions<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; module_directory=&quot;activity_as_directed&quot;<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; schema_file=&quot;arm.xml&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; rcs.date=&quot;$Date: 2002/07/29 15:22:07 $"<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; rcs.revision=&quot;$Revision: 1.17 $"<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; rcs.date=&quot;$Date: 2002/08/08 16:28:55 $"<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; rcs.revision=&quot;$Revision: 1.18 $"<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; describe.selects=&quot;YES&quot;<br>
 &gt;</p>
 
 </span>
-
-<p>&nbsp;</p>
-
-<h2>Entity definitions&nbsp;</h2>
-<p>See SC4 editorial directives (SC4 N1217) for more complete directives.</p>
-<h3>Reuse from AP214, PDM Schema UG, etc.</h3>
-<p>In the balloted version of the modules, the definitions of the ARMs were very
-poor.&nbsp;</p>
-<p>In order to improve them, do not hesitate to copy text definitions, rules,
-notes and examples that exist in the IRs (2nd ed). A lot of notes and examples
-have been added in order to clarify concepts that were not clear in the 1st ed.
-of the IRs.&nbsp;</p>
-<p>Other sources of texts are PDM UG 4.3 and AP214.</p>
-<p>&nbsp;</p>
-<h3>Normative versus informative text</h3>
-<p>Normative text shall only contain statements of fact (a xxx is..., a yyy
-defines ...) or constraints (a xxx shall refer to ...).</p>
-<p>Text that provide recommendations, information about intended use, about
-possibilities (e.g. any sentence like &quot;a xxx may ...&quot; ) shall be
-embedded in notes.</p>
-<p>In there are several notes in the same clause (4.2.x or 5.2.X ), they shall
-be numbered (starting from 1 at the first note in the clause).<br>
-</p>
-<h3>English abbreviations are forbidden</h3>
-<p>Use of abbreviations &quot;e.g.&quot; or &quot;i.e. is not allowed by the SC4
-directives. &quot;e.g.&quot; shall be replaced by the expression &quot;for
-example&quot;.</p>
-
-<p>&nbsp;</p>
 
 <h2><a name="Where _extens">Where to include extension of Select types</a></h2>
 
@@ -772,7 +735,7 @@ extended to include the assertions to Document_definition and File.
 
 <h2><a name="20020422182450_11">Comments in Express files</a></h2>
 <span class="606025315-27032002"><font face="Arial" size="2">The arm.exp and
-mim.exp files should include the CVS $Id: additional_module_guidelines.htm,v 1.17 2002/07/29 15:22:07 robbod Exp $ keyword and the SC4 N number as a
+mim.exp files should include the CVS $Id: additional_module_guidelines.htm,v 1.18 2002/08/08 16:28:55 thendrix Exp $ keyword and the SC4 N number as a
 comment on the first few lines of the file.</font></span>
 <p><span class="606025315-27032002"><font face="Arial" size="2">The Id will get
 expanded and updated every time you check in the file to CVS. That way you can
@@ -780,7 +743,7 @@ immediately tell when the file was last updated and will get around the issue
 raised by Greg about multiple versions of express files with the same N number.</font></span>
 <p><span class="606025315-27032002"><font face="Arial" size="2">E.g.</font>&nbsp;</span>
 <p><span class="606025315-27032002"><font face="Arial" size="2">(*<br>
-&nbsp; $Id: additional_module_guidelines.htm,v 1.17 2002/07/29 15:22:07 robbod Exp $<br>
+&nbsp; $Id: additional_module_guidelines.htm,v 1.18 2002/08/08 16:28:55 thendrix Exp $<br>
 &nbsp; N773 - ISO/CD TS - 10303-1042 Work request - EXPRESS MIM<br>
 *)</font></span>
 <p>&nbsp;
@@ -789,7 +752,7 @@ work_request_mim;</font></span>
 <p>&nbsp;
 <p><span class="606025315-27032002"><font face="Arial" size="2">We should also
 delete the last update comment at the bottom of the file as this is redundant -
-the update information is held by the $Id: additional_module_guidelines.htm,v 1.17 2002/07/29 15:22:07 robbod Exp $ field.</font></span>
+the update information is held by the $Id: additional_module_guidelines.htm,v 1.18 2002/08/08 16:28:55 thendrix Exp $ field.</font></span>
 <p>&nbsp;
 <h2><a name="20020422182450_12">Inserting Notes and examples in xml files</a></h2>
 <p><span class="198333009-21032002"><font face="Arial">In order to get the following output:</font></span><span class="919371121-26032002">
@@ -1133,8 +1096,8 @@ schema. These USE FROM statements may contain a list of imported constructs.</p>
     &nbsp;&nbsp; publication.year=&quot;2002&quot;<br>
     &nbsp;&nbsp; published=&quot;y&quot;<br>
     </b>
-    &nbsp;&nbsp; rcs.date=&quot;$Date: 2002/07/29 15:22:07 $&quot;<br>
-    &nbsp;&nbsp; rcs.revision=&quot;$Revision: 1.17 $&quot;&gt;
+    &nbsp;&nbsp; rcs.date=&quot;$Date: 2002/08/08 16:28:55 $&quot;<br>
+    &nbsp;&nbsp; rcs.revision=&quot;$Revision: 1.18 $&quot;&gt;
   </div>
 &nbsp;
 <p>
@@ -1408,17 +1371,17 @@ file will be modified like this:</span></font></p>
 <p><font size="2" face="Arial"><span class="573095806-30052002">&lt;?xml
 version=&quot;1.0&quot;?&gt;<br>
 &lt;&lt;&lt;&lt;&lt;&lt;&lt; arm.xml<br>
-&lt;!-- $Id: additional_module_guidelines.htm,v 1.17 2002/07/29 15:22:07 robbod Exp $ --&gt;<br>
+&lt;!-- $Id: additional_module_guidelines.htm,v 1.18 2002/08/08 16:28:55 thendrix Exp $ --&gt;<br>
 =======<br>
-&lt;!-- $Id: additional_module_guidelines.htm,v 1.17 2002/07/29 15:22:07 robbod Exp $ --&gt;<br>
+&lt;!-- $Id: additional_module_guidelines.htm,v 1.18 2002/08/08 16:28:55 thendrix Exp $ --&gt;<br>
 &gt;&gt;&gt;&gt;&gt;&gt;&gt; 1.11<br>
 &lt;?xml-stylesheet type=&quot;text/xsl&quot; href=&quot;../../../xsl/express.xsl&quot;?&gt;<br>
 &lt;!DOCTYPE express SYSTEM &quot;../../../dtd/express.dtd&quot;&gt;<br>
 &lt;express<br>
 &nbsp; language_version=&quot;2&quot;<br>
 &lt;&lt;&lt;&lt;&lt;&lt;&lt; arm.xml<br>
-&nbsp; rcs.date=&quot;$Date: 2002/07/29 15:22:07 $&quot;<br>
-&nbsp; rcs.revision=&quot;$Revision: 1.17 $&quot;&gt;</span></font></p>
+&nbsp; rcs.date=&quot;$Date: 2002/08/08 16:28:55 $&quot;<br>
+&nbsp; rcs.revision=&quot;$Revision: 1.18 $&quot;&gt;</span></font></p>
 
 <h2><a name="20020422182450_17">Module renaming</a></h2>
 <span class="746125613-27032002"><font face="Arial" size="2">To
@@ -1450,6 +1413,35 @@ Tell everyone what the new module name is, so that they can change all reference
 from the old module to new module</font></span>
 </span>
 <p>-</p>
+
+<h2><a name="Editorial considerations">Editorial considerations</a></h2>
+
+<h3>Entity definitions&nbsp;</h3>
+<p>See SC4 supplementary directives (SC4 N1217) for more complete directives.</p>
+<h3>Reuse from AP214, PDM Schema UG, etc.</h3>
+<p>In the balloted version of the modules, the definitions of the ARMs were very
+poor.&nbsp;</p>
+<p>In order to improve them, do not hesitate to copy text definitions, rules,
+notes and examples that exist in the IRs (2nd ed). A lot of notes and examples
+have been added in order to clarify concepts that were not clear in the 1st ed.
+of the IRs.&nbsp;</p>
+<p>Other sources of texts are PDM UG 4.3 and AP214.</p>
+<h3>Normative versus informative text</h3>
+<p>Normative text shall only contain statements of fact (a xxx is..., a yyy
+defines ...) or constraints (a xxx shall refer to ...).</p>
+<p>Text that provide recommendations, information about intended use, about
+possibilities (e.g. any sentence like &quot;a xxx may ...&quot; ) shall be
+embedded in notes.</p>
+<h3>English abbreviations are forbidden</h3>
+<p>Use of abbreviations &quot;e.g.&quot; or &quot;i.e. is not allowed by the SC4
+directives. &quot;e.g.&quot; shall be replaced by the expression &quot;for
+example&quot;.</p>
+
+<h3>Numbering of notes and examples</h3>
+<p>In there are several notes in the same clause (4.2.x or 5.2.X ), they shall
+be numbered (starting from 1 at the first note in the clause).. Same is true for
+examples.
+</p>
 
 </body>
 
