--- a/help/index.htm
+++ b/help/index.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html
 PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
-<!-- $Id: index.htm,v 1.16 2002/05/07 16:23:49 joshualubell Exp $ -->
+<!-- $Id: index.htm,v 1.17 2002/06/17 08:35:31 goset1 Exp $ -->
 <HTML>
 <HEAD>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -30,6 +30,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       &nbsp;|&nbsp; <a href="index.htm">Help index</a> 
       &nbsp;|&nbsp; <a href="additional_module_guidelines.htm">Additional guidelines</a> 
       &nbsp;|&nbsp; <a href="GE_guidelines.htm">Graphical Express specific guidelines</a> 
+      &nbsp;|&nbsp; <a href="resdoc_qd_creation.htm">Integrated Resource Creation </a> 
   ] </small>
   </center>
 <center><small>
