--- a/help/resdoc_qd_creation.htm
+++ b/help/resdoc_qd_creation.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html
 PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
-<!-- $Id: mod_creation.htm,v 1.9 2002/03/26 11:12:55 robbod Exp $ -->
+<!-- $Id: resdoc_qd_creation.htm,v 1.1 2002/10/17 01:08:53 thendrix Exp $ -->
 <HTML>
 <HEAD>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -16,7 +16,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       <td width="120">
         <h3 align="left">
           <b>Help</b><br/>
-          <small>$Revision: 1.9 $</small>
+          <small>$Revision: 1.1 $</small>
         </h3>
       </td>
       <td width="300" align="center">
@@ -77,10 +77,12 @@ var resourceClauses = new Array("main", "cover", "contents",
       <br/>Note: When editing the resource doc directory should already exist.
   </li>
   <li>
-      Add the new resource doc to the the repository index:
-      <a href="../repository_index.htm">repository_index.htm</a>
+      Add the new resource doc to the test repository index:
+      <a href="../repository_index.xml">resdoc_test_index.xml</a>
+Once things are working, it will be added to the real directory.
+      <a href="../repository_index.xml">repository_index.xml</a>
       <br/>Note: When editing the module should already be in 
-      <a href="../repository_index.htm">repository_index.htm</a>
+      <a href="../repository_index.xml">repository_index.xml</a>
   </li>
   <li>
       Create the EXPRESS files.  Store them in the resources directory - they are separated from the resource document for historical  them in the module directory.
