--- a/help/resdoc_qd_creation.htm
+++ b/help/resdoc_qd_creation.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html
 PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
-<!-- $Id: resdoc_qd_creation.htm,v 1.1 2002/10/17 01:08:53 thendrix Exp $ -->
+<!-- $Id: resdoc_qd_creation.htm,v 1.2 2002/10/17 23:10:59 thendrix Exp $ -->
 <HTML>
 <HEAD>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -16,7 +16,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       <td width="120">
         <h3 align="left">
           <b>Help</b><br/>
-          <small>$Revision: 1.1 $</small>
+          <small>$Revision: 1.2 $</small>
         </h3>
       </td>
       <td width="300" align="center">
@@ -129,11 +129,19 @@ Once things are working, it will be added to the real directory.
 <h2>How I made the nutty bolts example IR document Using Graphical Express and related tools</h2>
 <ul>
       <li>I created the test IR "nutty bolts" schemas using Graphical Express. I created all three schemas in one viseo file. </li>
-      <li> I then ran ge2module.wmf 3 times to create three sets of entity diagrams and one interface diagram.  </li>
+      <li> I then ran ge2module.wsf 3 times to create three sets of entity diagrams and one interface diagram.  </li>
       <li>I manually renamed the files per the above convention.
 </li>
-      <li>I manually created directories for each schema and moved the express, express xml and expressg xml, and express-g gif files  to the appropriate directory.</li>
-      <li> Then I ran extractdescriptions.wmf and these files too are in their schema's directory resources/(resource_name)</li></ul>
+      <li>I manually created directories for each schema and moved the
+      express, express xml and expressg xml, and express-g gif files
+      to the appropriate directory with appropriate names. 
+
+     </li>
+     <li>I edited  the diagram and express xml to point at a new stylesheet:
+&lt;xsl:stylesheet
+     href="../../../xsl/res_doc/imgfile.xsl" ...etc &lt;
+</li>
+      <li> Then I ran extractDescriptions.wsf and these files too are in their schema's directory: resources/(resource_name)/</li></ul>
 </BODY>
 </HTML>
   
