Clarified definition of list element <ol>

--- a/help/xml_text.htm
+++ b/help/xml_text.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html
 PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
-<!-- $Id: xml_text.htm,v 1.5 2002/03/04 08:44:05 robbod Exp $ -->
+<!-- $Id: xml_text.htm,v 1.6 2002/03/04 09:36:28 robbod Exp $ -->
 <HTML>
 <HEAD>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -16,7 +16,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       <td width="120">
         <h3 align="left">
           <b>Help</b><br/>
-          <small>$Revision: 1.5 $</small>
+          <small>$Revision: 1.6 $</small>
         </h3>
       </td>
       <td width="300" align="center">
@@ -77,7 +77,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 
   &lt;!ELEMENT li (%text-elts;)*&gt;
   </pre>  
-  where <tt>&lt;ul&gt;</tt> is an unordered list, <tt>&lt;ol&gt;</tt> and
+  where <tt>&lt;ul&gt;</tt> is an unordered list, <tt>&lt;ol&gt;</tt> is an ordered list and
   <tt>&lt;li&gt;</tt> is a list item.
   <p>
   E.g. The following XML:
