--- a/help/resdoc_qd_creation.htm
+++ b/help/resdoc_qd_creation.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html
 PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
-<!-- $Id: resdoc_qd_creation.htm,v 1.2 2002/10/17 23:10:59 thendrix Exp $ -->
+<!-- $Id: resdoc_qd_creation.htm,v 1.3 2002/10/21 02:37:58 thendrix Exp $ -->
 <HTML>
 <HEAD>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -16,7 +16,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       <td width="120">
         <h3 align="left">
           <b>Help</b><br/>
-          <small>$Revision: 1.2 $</small>
+          <small>$Revision: 1.3 $</small>
         </h3>
       </td>
       <td width="300" align="center">
@@ -125,11 +125,10 @@ Once things are working, it will be added to the real directory.
       <code><a href="util.htm#xml2html">xml2html</a></code>.
   </li>
 </ul>
-
-<h2>How I made the nutty bolts example IR document Using Graphical Express and related tools</h2>
+<h2>How I made the nutty bolts example IR document and its resource schemas using Graphical Express and related tools</h2>
 <ul>
-      <li>I created the test IR "nutty bolts" schemas using Graphical Express. I created all three schemas in one viseo file. </li>
-      <li> I then ran ge2module.wsf 3 times to create three sets of entity diagrams and one interface diagram.  </li>
+      <li>I created the test IR "nutty bolts" schemas using Graphical Express. I created all three schemas in one Visio file. </li>
+      <li> I then ran ge2module.wsf 3 times to create three sets of entity diagrams and one interface diagram.  This was before the option of writing them into the modules directory (which is not where they go anyway.</li>
       <li>I manually renamed the files per the above convention.
 </li>
       <li>I manually created directories for each schema and moved the
@@ -137,11 +136,18 @@ Once things are working, it will be added to the real directory.
       to the appropriate directory with appropriate names. 
 
      </li>
-     <li>I edited  the diagram and express xml to point at a new stylesheet:
+     <li>I edited  the diagram xml files  to point at a new stylesheet:<br>
 &lt;xsl:stylesheet
-     href="../../../xsl/res_doc/imgfile.xsl" ...etc &lt;
+     href="../../../xsl/res_doc/imgfile.xsl" ...etc &gt;
+<br>
+and set description.file="descriptions.xml"<br>
+The links don't work right yet, so watch this space...
+</li><li>I edited  the express  xml files  to point at a new stylesheet: <br>
+&lt;xsl:stylesheet
+     href="../../../xsl/res_doc/express.xsl" ...etc &gt;
 </li>
-      <li> Then I ran extractDescriptions.wsf and these files too are in their schema's directory: resources/(resource_name)/</li></ul>
+      <li> Then I ran extractDescriptions.wsf, setting Express xml file to <br> ..\data\resources\nutty_bolts_schema\nutty_bolts_schema.xml.<br>
+and giving it the name descriptions.xml.</li></ul>
 </BODY>
 </HTML>
   
