--- a/help/resdoc_qd_creation.htm
+++ b/help/resdoc_qd_creation.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html
 PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
-<!-- $Id: resdoc_qd_creation.htm,v 1.3 2002/10/21 02:37:58 thendrix Exp $ -->
+<!-- $Id: resdoc_qd_creation.htm,v 1.4 2002/11/06 23:51:38 thendrix Exp $ -->
 <HTML>
 <HEAD>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -16,11 +16,11 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       <td width="120">
         <h3 align="left">
           <b>Help</b><br/>
-          <small>$Revision: 1.3 $</small>
+          <small>$Revision: 1.4 $</small>
         </h3>
       </td>
       <td width="300" align="center">
-        <h3 align="left">Module Creation</h3>
+        <h3 align="left">Integrated Resource Document Creation</h3>
           
       </td>
     </tr>    
@@ -42,7 +42,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 <h2>
   <a name="mod_files">Creating / Editing an Integrated  Resource - A Quick and Dirty Guide that even mentions GE.</a>
 </h2>
-<p><i>Warning: the following material was hastily prepared and has not been tested.</i>
+<p><i>Warning: this process is still in development and subject to frequent improvements.</i>
 </p>  
 The following stages are required in the creation or editing of an integrated resource (part 40-50 series).:
 <ul>
@@ -54,21 +54,16 @@ The following stages are required in the creation or editing of an integrated re
  <p>
 var resourceSchemas = new Array("nut_and_bolt_1_schema", "nut_and_bolt_2_schema", "nut_and_bolt_3_schema");
 </p>
-<p> resourceClauses is used to estblish the files in the sys directory</p>
+<p> resourceClauses is used to establish the files in the sys directory</p>
 
 var resourceClauses = new Array("main", "cover", "contents", 
 <br>			      "introduction", "foreword", 
 <br>			      "1_scope", "2_refs", "3_defs", 
 
-<br>			      "4_schema",  "5_schema", "6_schema", "7_schema", 
 <br>			      "a_short_names", 
-    <br>                          "b_obj_reg", 
+<br>                          "b_obj_reg", 
 <br>			      "c_expg",
-<br>                            "c_4_schema_expg","c_5_schema_expg",
-<br>                              "c_6_schema_expg","c_7_schema_expg", 
 			      "d_exp",
-<br>			      "d_exp_schema_4","d_exp_schema_5",
-<br>			      "d_exp_schema_6","d_exp_schema_7",
 <br>			      "e_guide", 
 <br>			      "f_discussion", 
 <BR>			      "e_add_scope", 
@@ -77,20 +72,14 @@ var resourceClauses = new Array("main", "cover", "contents",
       <br/>Note: When editing the resource doc directory should already exist.
   </li>
   <li>
-      Add the new resource doc to the test repository index:
-      <a href="../repository_index.xml">resdoc_test_index.xml</a>
-Once things are working, it will be added to the real directory.
-      <a href="../repository_index.xml">repository_index.xml</a>
-      <br/>Note: When editing the module should already be in 
+      Add the new resource doc to the repository index:
+      <br/>Note: When editing the resource_doc should already be in 
       <a href="../repository_index.xml">repository_index.xml</a>
   </li>
   <li>
       Create the EXPRESS files.  Store them in the resources directory - they are separated from the resource document for historical  them in the module directory.
     <ul>
       <li>The EXPRESS should be called <code>(schema_name).exp</code></li>
-      <li>the MIM short form EXPRESS should be called <code>mim.exp</code></li>
-      <li>the MIM long form EXPRESS should be called <code>mim_lf.exp</code>
-      as described in  <a href="mod_files.htm">"Module Files"</a></li>
     </ul>
   </li>
   <li>
@@ -120,33 +109,27 @@ Once things are working, it will be added to the real directory.
       <li>The EXPRESS-G files for schema entity diagrams should be called <code>(schema_name)expg(number).(xml|gif)</code></li>
       <li>A single  EXPRESS-G schema level diagram is permitted in the Introduction.  These files should be called <code>schema_diagexpg(number).(xml|gif)</code> These files are placed in the resource_doc directory.</li>
   </li>
-  <li>
-      Convert the XML to HTML using the JScript
-      <code><a href="util.htm#xml2html">xml2html</a></code>.
-  </li>
 </ul>
-<h2>How I made the nutty bolts example IR document and its resource schemas using Graphical Express and related tools</h2>
+<h2>Using Graphical Express and related tools to create new resource schemas and diagrams</h2>
 <ul>
-      <li>I created the test IR "nutty bolts" schemas using Graphical Express. I created all three schemas in one Visio file. </li>
-      <li> I then ran ge2module.wsf 3 times to create three sets of entity diagrams and one interface diagram.  This was before the option of writing them into the modules directory (which is not where they go anyway.</li>
-      <li>I manually renamed the files per the above convention.
+      <li>Manually create directories in stepmod\data\resources for each schema.</li>
+      <li>Create schemas in Graphical Express. These can be in one or more GE files. </li>
+      <li>Then export to XML. Suggest creating  a directories stepmod\data\resources\(schema)\dvlp for these. Do this once for each schema.
 </li>
-      <li>I manually created directories for each schema and moved the
-      express, express xml and expressg xml, and express-g gif files
-      to the appropriate directory with appropriate names. 
+<li>Then run ge2module (version 1.3 or higher)</li>
 
-     </li>
-     <li>I edited  the diagram xml files  to point at a new stylesheet:<br>
+     <li>Edit  the diagram xml files  to point at a new stylesheet:<br>
 &lt;xsl:stylesheet
      href="../../../xsl/res_doc/imgfile.xsl" ...etc &gt;
 <br>
-and set description.file="descriptions.xml"<br>
-The links don't work right yet, so watch this space...
-</li><li>I edited  the express  xml files  to point at a new stylesheet: <br>
+and set description.file="descriptions.xml"<br>Edit imgfile.content attributes module="(name of resource document NOT resource schema)" Example: &lt; imgfile.content module="nutty_bolts" file="nut_and_bolt_1_schemaexpg1.xml"&gt;
+</li>
+
+<li>Edit the express  xml files  to point at a new stylesheet: <br>
 &lt;xsl:stylesheet
      href="../../../xsl/res_doc/express.xsl" ...etc &gt;
 </li>
-      <li> Then I ran extractDescriptions.wsf, setting Express xml file to <br> ..\data\resources\nutty_bolts_schema\nutty_bolts_schema.xml.<br>
+      <li> Run extractDescriptions.wsf, setting Express xml file to <br> ..\data\resources\(schema name)\(schema name).xml.<br>
 and giving it the name descriptions.xml.</li></ul>
 </BODY>
 </HTML>
