--- a/help/resdoc_qd_creation.htm
+++ b/help/resdoc_qd_creation.htm
@@ -40,15 +40,16 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 
 
 <h2>
-  <a name="mod_files">Creating / Editing an Integrated  Resource - A Quick and Dirty Guide that even mentions GE.</a>
+  <a name="mod_files">Creating / Editing an Integrated  Resource</a>
 </h2>
 <p><i>Warning: this process is still in development and subject to frequent improvements.</i>
 </p>  
 The following stages are required in the creation or editing of an integrated resource (part 40-50 series).:
+<h2>Getting started </h2>
 <ul>
   <li>
-      Create the <a href="mod_files.htm">directory and files</a> for
-      the resource document using the the wmf file mkresource.wmf, or start from the JScript
+      Create the directory and files for
+      the integrated resource document using the the wmf file mkresource.wmf, or start from the JScript
       <code><a href="util.htm#create">mkresource</a></code>.  Before running this, if you know the names of your schemas, edit mkresource.js variables resourceSchemas and resourceClauses to reflect this.  AN IR has a separate clause per schema, and in the repository these are hard-coded in the resource_document's sys directory.  
 
  <p>
@@ -76,6 +77,13 @@ var resourceClauses = new Array("main", "cover", "contents",
       <br/>Note: When editing the resource_doc should already be in 
       <a href="../repository_index.xml">repository_index.xml</a>
   </li>
+<h2> Creating Express and diagrams. 
+</h2>
+      <li>Manually create directories in stepmod\data\resources for each schema.</li>
+<h3>Creating Express first
+</h3>
+NOTE if you are using Graphical Express, read this for reference, but skip to next section.
+
   <li>
       Create the EXPRESS files.  Store them in the resources directory - they are separated from the resource document for historical  them in the module directory.
     <ul>
@@ -110,13 +118,17 @@ var resourceClauses = new Array("main", "cover", "contents",
       <li>A single  EXPRESS-G schema level diagram is permitted in the Introduction.  These files should be called <code>schema_diagexpg(number).(xml|gif)</code> These files are placed in the resource_doc directory.</li>
   </li>
 </ul>
-<h2>Using Graphical Express and related tools to create new resource schemas and diagrams</h2>
+<h3>Using Graphical Express and related tools to create new resource schemas and diagrams</h3>
 <ul>
-      <li>Manually create directories in stepmod\data\resources for each schema.</li>
+
       <li>Create schemas in Graphical Express. These can be in one or more GE files. </li>
-      <li>Then export to XML. Suggest creating  a directories stepmod\data\resources\(schema)\dvlp for these. Do this once for each schema.
+      <li>Publish as XML. Do this once for each schema. Suggest putting in  directories stepmod\data\resources\(schema)\dvlp.
 </li>
-<li>Then run ge2module (version 1.3 or higher)</li>
+<li>Then run ge2module (version 1.3 or higher). This will create schema level and entity level diagrams. The schema level diagram might in some cases be suitable for the required interface diagram in the introduction. But they are not needed in the resources schema directores. The entity level diagram file numbers will start with 2 as usual and so update the express-g tags in the resources.xml file of the resource document<br>
+    &lt;express-g&gt;<br>
+       &lt;imgfile file="nut_and_bolt_1_schemaexpg2.xml"/&gt;<br>
+     &lt;/express-g&gt;
+</li>
 
      <li>Edit  the diagram xml files  to point at a new stylesheet:<br>
 &lt;xsl:stylesheet
