--- a/help/index.htm
+++ b/help/index.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html
 PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
-<!-- $Id: index.htm,v 1.17 2002/06/17 08:35:31 goset1 Exp $ -->
+<!-- $Id: index.htm,v 1.18 2002/10/17 01:07:20 thendrix Exp $ -->
 <HTML>
 <HEAD>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -16,7 +16,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       <td width="120">
         <h3 align="left">
           <b>Help</b><br/>
-          <small>$Revision: 1.17 $</small>
+          <small>$Revision: 1.18 $</small>
         </h3>
       </td>
       <td width="300" align="center">
@@ -111,6 +111,8 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
     <li><a href="util.htm">Utility scripts</a></li>
 	<ul>
 	  <li><a href="util.htm#create">Creating a module</a></li>
+	  <li><a href="util.htm#create_schema">Creating a resource schema</a></li>
+	  <li><a href="util.htm#create_irdoc">Creating a resource document</a></li>
 	  <li><a href="util.htm#xmlhtml">Generating HTML</a></li>
 	  <li><a href="util.htm#xmlhtmlant">Automated builds using Ant</a></li>
 	  <li><a href="util.htm#imagemap2xml">HTML image map to XML file</a></li>
