--- a/help/mod_doc.htm
+++ b/help/mod_doc.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html
 PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
-<!-- $Id: mod_doc.htm,v 1.9 2002/03/04 08:44:05 robbod Exp $ -->
+<!-- $Id: mod_doc.htm,v 1.10 2002/03/04 09:36:28 robbod Exp $ -->
 <HTML>
 <HEAD>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -16,7 +16,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       <td width="120">
         <h3 align="left">
           <b>Help</b><br/>
-          <small>$Revision: 1.9 $</small>
+          <small>$Revision: 1.10 $</small>
         </h3>
       </td>
       <td width="300" align="center">
@@ -79,13 +79,27 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
              name       NMTOKEN                            #REQUIRED
              part       NMTOKEN                            #REQUIRED
              version    NMTOKEN                            #REQUIRED
+             sc4.working_group (3 | 12) "12"
              wg.number  NMTOKEN                            #REQUIRED
+             wg.number.supersedes CDATA #IMPLIED
+     	     wg.number.arm CDATA #REQUIRED
+	     wg.number.mim CDATA #REQUIRED
+	     wg.number.ballot_package CDATA #IMPLIED
+	     wg.number.ballot_comment CDATA #IMPLIED
+	     checklist.internal_review CDATA #IMPLIED
+	     checklist.project_leader CDATA #IMPLIED
+	     checklist.convener CDATA #IMPLIED
              status  (CD | FDIS | DIS | IS | CD-TS | TS | WD) "CD-TS"
              publication.year CDATA                        #REQUIRED
              published (y | n)                             "y"
              language (E)                                  "E"
+	     previous.revision.year CDATA #IMPLIED
+	     previous.revision.cancelled (NO | YES) #IMPLIED
+	     revision.complete (NO | YES) #IMPLIED
+	     revision.scope CDATA #IMPLIED
              rcs.date CDATA                                #REQUIRED 
              rcs.revision CDATA                            #REQUIRED&gt;
+             development.folder CDATA #IMPLIED
 </pre>
 Where:
   <ul>
@@ -97,16 +111,36 @@ Where:
           <dt>2 for a second edition or Tech Corr against 1, etc.</dt>
         </dl>
       </li>
-    <li><tt>wg.number</tt> is the SC4 N-number or document number.</li>
+    <li><tt>sc4.working_group</tt> is the SC4 working group responsible for
+	the module.</li>
+    <li><tt>wg.number</tt> is the SC4 N-number or document number for the
+	module.</li>
+    <li><tt>wg.number.supersedes</tt> is the SC4 N-number or document
+	number that this module supersedes.</li>
+    <li><tt>wg.number.arm </tt> is the SC4 N-number or document number for
+	the arm.exp file of the module.</li>
+    <li><tt>wg.number.mim </tt> is the SC4 N-number or document number for
+	the mim.exp file of the module.</li>
+    <li><tt>wg.number.ballot_package</tt>is the SC4 N-number or document number for
+	the ballot package in which this module was balloted.</li>
+    <li><tt>wg.number.ballot_comment</tt>is the SC4 N-number or document number for
+	the ballot package in which this module was balloted.</li>
+    <li><tt>checklist.internal_review</tt>is the SC4 N-number or document number for
+	the internal checklist of this module.</li>
+    <li><tt>checklist.project_leader</tt>is the SC4 N-number or document number for
+	the project leader checklist of this module.</li>
+    <li><tt>checklist.convener</tt>is the SC4 N-number or document number for
+	the convener checklist of this module.</li>
+	
     <li><tt>status</tt> the ISO status</li>
     <li><tt>publication.year</tt></li>
     <li><tt>published</tt> y if the module has been published as an
     ISO standard</li>
     <li><tt>language</tt> the language of the standard. Defaults to E - English</li>
     <li><tt>rcs.date</tt> Date attribute for source control software like
-	RCS or CVS. E.g. <tt>$Date: 2002/03/04 08:44:05 $</tt></li>
+	RCS or CVS. E.g. <tt>$Date: 2002/03/04 09:36:28 $</tt></li>
     <li><tt>rcs.revision</tt>Revision attribute for source control software
-	like RCS or CVS. E.g. <tt>$Revision: 1.9 $</tt></li>
+	like RCS or CVS. E.g. <tt>$Revision: 1.10 $</tt></li>
   </ul>
 
 
