--- a/help/util.htm
+++ b/help/util.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html
 PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
-<!-- $Id: util.htm,v 1.15 2002/05/07 16:23:49 joshualubell Exp $ -->
+<!-- $Id: util.htm,v 1.16 2002/05/28 05:56:35 robbod Exp $ -->
 <HTML>
 <HEAD>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -16,7 +16,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       <td width="120">
         <h3 align="left">
           <b>Help</b><br/>
-          <small>$Revision: 1.15 $</small>
+          <small>$Revision: 1.16 $</small>
         </h3>
       </td>
       <td width="300" align="center">
@@ -44,6 +44,8 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
   modules.
   <ul>
     <li><a href="#create">Creating a module</a></li>
+    <li><a href="#create_schema">Creating a resource schema</a></li>
+    <li><a href="#create_irdoc">Creating a resource document</a></li>
     <li><a href="#xmlhtml">Generating HTML</a></li>
     <li><a href="#xmlhtmlant">Automated builds using Ant</a></li>
     <li><a href="#imagemap2xml">HTML image map to XML file</a></li>
@@ -66,8 +68,6 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
     <li>the <a href="sys.htm">SYS</a> files.</li> 
   </ul>
   <p>
-  Before running the global variable
-  <code>stepmodHome</code> must be set in the Jscript <code>utils/mkmodule.js</code>.
 
   </p>
   To create a new module ,
@@ -89,6 +89,28 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
   where <code>&lt;module&gt;</code> is the name of the new module.
  -->
   
+  <h3><a name="create_schema">Creating a common resource schema</a></h3>
+  The Windows Script File <code>utils/mkresource_schema.wsf</code> should be used
+  when creating a new common resource schema.
+  Note: this assumes that <a href="#cscript">JScript is installed</a>.
+  It will generate:
+    <ul>
+    <li>the resource directory, <tt>stepmod/data/resources/[resource_schema_name]</li>
+    <li>the relevant navigation files.</li> 
+  </ul>
+
+    <h3><a name="create_doc">Creating a common resource document</a></h3>
+  The Windows Script File <code>utils/resources/mkresource.wsf</code> should be used
+  when creating a new common resource document.
+  Note: this assumes that <a href="#cscript">JScript is installed</a>.
+  It will generate:
+    <ul>
+    <li>the resource document directory, <tt>stepmod/data/resource_docs/[resource_doc_name]</li>
+    <li>the relevant navigation files.</li> 
+  </ul>
+
+  <a href="resdoc_qd_creation.htm">Click here for more details.</a>
+
   <h3><a name="xmlhtml">Generating HTML</a></h3>
   The Jscript <code>utils/xml2html.js</code> can be used to convert the XML
   in the module repository to HTML.
@@ -531,8 +553,8 @@ EXPRESS file to a named XML file.
           <blockquote>
             <code>
               &lt;express language_version="2"<br/> 
-            &nbsp;&nbsp;&nbsp;rcs.date="$Date: 2002/05/14 17:13:37 $" <br/>
-            &nbsp;&nbsp;&nbsp;rcs.revision="$Revision: 1.12 $"<br/>
+            &nbsp;&nbsp;&nbsp;rcs.date="$Date: 2002/05/28 05:56:35 $" <br/>
+            &nbsp;&nbsp;&nbsp;rcs.revision="$Revision: 1.16 $"<br/>
             &nbsp;&nbsp;&nbsp;description.file="arm_descriptions.xml"<br/>
             &gt;
           </code>
