Modified helpon Saxon/Ant

--- a/help/util.htm
+++ b/help/util.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html
 PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
-<!-- $Id: util.htm,v 1.16 2002/05/28 05:56:35 robbod Exp $ -->
+<!-- $Id: util.htm,v 1.17 2002/12/24 09:54:02 robbod Exp $ -->
 <HTML>
 <HEAD>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -16,7 +16,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       <td width="120">
         <h3 align="left">
           <b>Help</b><br/>
-          <small>$Revision: 1.16 $</small>
+          <small>$Revision: 1.17 $</small>
         </h3>
       </td>
       <td width="300" align="center">
@@ -224,10 +224,19 @@ Platform</a>.
 
 </li><li>
 
-A TrAX-compliant XSLT processor such as <a
-href="http://saxon.sourceforge.net">Saxon</a> (use the
-&ldquo;full&rdquo; version, not the &ldquo;instant&rdquo; version) or
-<a href="http://xml.apache.org/xalan-j">Xalan-Java</a>.
+
+    The <a
+href="http://saxon.sourceforge.net">Saxon</a>  XSLT processor (use the
+&ldquo;full&rdquo; version, not the &ldquo;instant&rdquo; version).
+    <p>
+    Note: There is  some implementation dependent code is used so you must use SAXON rather other 
+    TrAX-compliant XSLT processors such as <a href="http://xml.apache.org/xalan-j">Xalan-Java</a>.
+    </p>
+    <p>
+    Note: To avoid memory problems, set the environment variable<br/>
+    ANT_OPTS=-Xmx256m
+    
+    </p>
 
 </li></ul><p>
 
@@ -553,8 +562,8 @@ EXPRESS file to a named XML file.
           <blockquote>
             <code>
               &lt;express language_version="2"<br/> 
-            &nbsp;&nbsp;&nbsp;rcs.date="$Date: 2002/05/28 05:56:35 $" <br/>
-            &nbsp;&nbsp;&nbsp;rcs.revision="$Revision: 1.16 $"<br/>
+            &nbsp;&nbsp;&nbsp;rcs.date="$Date: 2002/12/24 09:54:02 $" <br/>
+            &nbsp;&nbsp;&nbsp;rcs.revision="$Revision: 1.17 $"<br/>
             &nbsp;&nbsp;&nbsp;description.file="arm_descriptions.xml"<br/>
             &gt;
           </code>
