Fixed a few things

--- a/help/resdoc_qd_creation.htm
+++ b/help/resdoc_qd_creation.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html
 PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
-<!-- $Id: resdoc_qd_creation.htm,v 1.4 2002/11/06 23:51:38 thendrix Exp $ -->
+<!-- $Id: resdoc_qd_creation.htm,v 1.6 2002/12/19 23:04:55 thendrix Exp $ -->
 <HTML>
 <HEAD>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -16,7 +16,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       <td width="120">
         <h3 align="left">
           <b>Help</b><br/>
-          <small>$Revision: 1.4 $</small>
+          <small>$Revision: 1.6 $</small>
         </h3>
       </td>
       <td width="300" align="center">
@@ -58,18 +58,17 @@ var resourceSchemas = new Array("nut_and_bolt_1_schema", "nut_and_bolt_2_schema"
 <p> resourceClauses is used to establish the files in the sys directory</p>
 
 var resourceClauses = new Array("main", "cover", "contents", 
-<br>			      "introduction", "foreword", 
-<br>			      "1_scope", "2_refs", "3_defs", 
-
+<br>			      "introduction", "foreword",
+<br>			      "1_scope", "2_refs", "3_defs",
 <br>			      "a_short_names", 
 <br>                          "b_obj_reg", 
 <br>			      "c_expg",
-			      "d_exp",
-<br>			      "e_guide", 
-<br>			      "f_discussion", 
-<BR>			      "e_add_scope", 
-			      "biblio");
- 
+<br>			      "d_exp",
+<br>			      "discussion", 
+<br>			      "examples", 
+<br>			      "add_scope", 
+<br>			      "biblio");
+
       <br/>Note: When editing the resource doc directory should already exist.
   </li>
   <li>
