Added ballot info

--- a/help/index.htm
+++ b/help/index.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html
 PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
-<!-- $Id: index.htm,v 1.18 2002/10/17 01:07:20 thendrix Exp $ -->
+<!-- $Id: index.htm,v 1.19 2002/12/24 09:54:02 robbod Exp $ -->
 <HTML>
 <HEAD>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -16,7 +16,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       <td width="120">
         <h3 align="left">
           <b>Help</b><br/>
-          <small>$Revision: 1.18 $</small>
+          <small>$Revision: 1.19 $</small>
         </h3>
       </td>
       <td width="300" align="center">
@@ -125,7 +125,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 </a>
 
   </ul>
-
+    <li><a href="ballot.htm">Ballots</a></li>
     </ul>
   </BODY>
 </HTML>
